cmake_minimum_required(VERSION 3.2)
project(PebbleApp)
set(CMAKE_C_FLAGS "-std=c11 -mthumb -ffunction-sections -g -fno-diagnostics-show-caret -D_REENT_SMALL=1 -Wall -Wextra -Werror -Wpointer-arith -Wno-unused-parameter -Wno-missing-field-initializers -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-parameter -Wno-error=unused-but-set-variable -Wno-packed-bitfield-compat -mcpu=cortex-m3 -Os -Werror=return-type")
file(GLOB_RECURSE src "src/*")
#file(GLOB_RECURSE build "build/*/*.c")
#set(SOURCES ${src} ${build})
set(SOURCES ${src})
set(INCLUDES_APLITE ~/Library/Application\ Support/Pebble\ SDK/SDKs/current/sdk-core/pebble/aplite/include)
set(INCLUDES_BASALT ~/Library/Application\ Support/Pebble\ SDK/SDKs/current/sdk-core/pebble/basalt/include)
set(INCLUDES_CHALK ~/Library/Application\ Support/Pebble\ SDK/SDKs/current/sdk-core/pebble/chalk/include)
#set(INCLUDES_RES_APLITE build/aplite/src/)
#set(INCLUDES_RES_BASALT build/basalt/src/)
#set(INCLUDES_RES_CHALK build/chalk/src/)
add_definitions(-DPEBBLE)
#include_directories(${INCLUDES_CHALK} ${INCLUDES_RES_CHALK})
include_directories(${INCLUDES_CHALK})
add_executable(app ${SOURCES})
